# template_langchain

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
notebooks/: test_agent.ipynb
sources/agent_multi_tools/application/: app_fill_in_database.py  app_fill_in_vector_db.py  app_streamlit.py
sources/agent_multi_tools/application/agent/: agent_state_graph.py  agent_tool_router.py
sources/agent_multi_tools/application/chains/: chain_conversation.py  chain_rag.py  chain_text_to_sql.py  chain_weather.py
sources/agent_multi_tools/application/tools/: conversation.py  rag.py  text_to_sql.py  weather.py
sources/agent_multi_tools/config/: config_agent.py  config_open_meteo.py  config_prompt.py  config_sql.py  config_tools.py
sources/agent_multi_tools/domain/ports/: chat_history_handler.py  database_handler.py  weather_api_handler.py
sources/agent_multi_tools/domain/usecases/: fill_in_database.py  fill_in_vector_db.py
sources/agent_multi_tools/infrastructure/chat_history/: in_memory_chat_history_handler.py
sources/agent_multi_tools/infrastructure/database/: postgres_databse_handler.py
sources/agent_multi_tools/infrastructure/embeddings/: ollama_embedding_handler.py
sources/agent_multi_tools/infrastructure/interface/: chat_handler.py
sources/agent_multi_tools/infrastructure/llm/: ollama_llm_handler.py
sources/agent_multi_tools/infrastructure/tool_binding_llm/: ollama_tool_binding_llm_handler.py
sources/agent_multi_tools/infrastructure/weather_api/: open_meteo_api_handler.py
sources/agent_multi_tools/ports/: embedding_handler.py  interface_handler.py  llm_handler.py  tool_binding_llm_handler.py
sources/agent_multi_tools/usecases/: fill_in_database.py  fill_in_vector_db.py
(+16 files in other folders)
